<resources>
    <string name="app_name_reward">维依悬赏</string>
    <string name="base_default_loading">加载中&#8230;</string>
    <string name="base_default_empty_message">加载失败,请点击重试</string>
    <string name="loading_more_tips">正在加载中…</string>
    <string name="loading_more_error">加载更多失败</string>
    <string name="base_default_empty_data_message">这里没有内容</string>
    <string name="app_wifi_isopen">无法连接到服务器，请检查您的网络连接</string>
    <string name="retry">重试</string>

    <string name="LAYOUT_TRANSANIM_TIME_NORMAL">300</string>
    <string name="image_desc">NULL</string>

    <string name="main_tag_text_home">首页</string>
    <string name="main_tag_text_publish">悬赏</string>
    <string name="main_tag_text_receive">领赏</string>
    <string name="main_tag_text_my">我的</string>

    <!-- 对话框 -->
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_update">立即更新</string>
    <string name="dialog_yes">是</string>
    <string name="dialog_no">否</string>
    <string name="action_sheet_cancel">取消</string>
    <string name="dialog_title_notify">提醒</string>
    <string name="dialog_title_contact">联系人好友</string>
    <string name="dialog_loading">努力加载中&#8230;</string>
    <string name="button_save">保存</string>
    <string name="choose_type_tip">提供您的排号信息给悬赏人</string>
    <string name="handwriting">手填排号单</string>
    <string name="getpic">拍摄排号单</string>

    <!-- 登录 -->
    <string name="login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_phone_num">手机号</string>
    <string name="login_phone_must_be_not_empty">手机号不能为空</string>
    <string name="login_pwd_must_be_not_empty">密码不能为空</string>
    <string name="login_pwd_less_6">密码长度必须大于6位</string>
    <string name="login_phone_not_match">手机号格式有误</string>
    <string name="login_input_error">帐号或密码错误</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_reinput_pwd_hint">请再次输入密码</string>
    <string name="login_pwd_forget">忘记密码?</string>
    <string name="forget_pwd">设置密码</string>
    <string name="reset_pwd">重置密码</string>
    <string name="reset_pwd_success">重置密码成功</string>
    <string name="pwd_too_short">密码太短了</string>
    <string name="pwd_too_long">密码太长了</string>
    <string name="pwd_not_equals">两次密码输入不一致</string>
    <string name="login_second">%1$s秒</string>
    <string name="auth_code">验证码</string>
    <string name="login_get_auth">获取验证码</string>
    <string name="please_input_auth">请输入验证码</string>
    <string name="auth_tip">验证码已发送,请注意查收</string>
    <string name="common_error_unknown">服务器错误,请稍后再试</string>
    <string name="common_net_word_error">网络异常,请稍后再试</string>
    <string name="get_token_error">获取token失败</string>
    <string name="register">注册</string>
    <string name="register_now">立即注册</string>
    <string name="register_success">注册成功</string>
    <string name="pwd">密码</string>
    <string name="please_input_pwd">请输入新密码</string>
    <string name="please_re_input_pwd">请输入新密码</string>
    <string name="please_reinput_pwd">确认密码</string>

    <!-- 选择商家悬赏 -->
    <string name="title_select_reward">选择商家悬赏</string>
    <string name="title_get_award">选择领赏商家</string>
    <string name="reward_count">悬赏人数：%1$s人</string>
    <string name="shop_distance">距离您：%1$sm</string>
    <string name="save_time">平均节省：%1$s分钟</string>
    <string name="show_tip_publish">饿得不行了？赶时间？请客户？\n不能等位，但就是想吃！\n即刻发布悬赏，所有在排队的好心人都会来帮你！</string>
    <string name="show_tip_receive">不是很着急？\n吧你的派对号让给需要的人吧！\n技能帮助别人，还能笑赚点，为什么不呢？</string>

    <!-- 发布悬赏信息详情页 -->
    <string name="input_reward_info_title">发布悬赏信息</string>
    <string name="not_get_shop_info">未获取到商户信息</string>
    <string name="reward_time_duration">即时悬赏：（%1$s分钟）</string>
    <string name="diners_count">就餐人数</string>
    <string name="reward_money">悬赏金额</string>
    <string name="reward_type">悬赏类型</string>
    <string name="tip_please_diners_count">请输入就餐人数</string>
    <string name="tip_please_reward_money">请输入悬赏金额</string>
    <string name="tip_diners_count_not_be_0">就餐人数不能为0</string>
    <string name="tip_reward_money_not_be_0">悬赏金额必须大于0</string>
    <string name="public_sure">确认要发布悬赏任务吗？</string>
    <string name="sys_tip">系统提示？</string>
    <string name="public_success">发布成功</string>

    <!-- 已发布订单页面 -->
    <string name="wait_for_reward">等待领赏</string>
    <string name="order_user_num">%1$s 人</string>
    <string name="order_price">%1$s 元</string>
    <string name="appointment">预约悬赏</string>
    <string name="immediate">即时悬赏（10分钟）</string>
    <string name="add_reward_tip">追加后赏金:</string>
    <string name="cancel_reward_order_success">取消成功</string>
    <string name="cancel_tip_content">确认要取消悬赏任务吗?</string>
    <string name="add_reward_success">追加悬赏成功</string>
    <string name="reward_name">悬赏人：%1$s</string>
    <string name="task_start">任务开始</string>
    <string name="call_tip">是否要电话联系对方？</string>
    <string name="task_continue">任务进行中</string>
    <string name="task_canceled">任务已取消</string>
    <string name="task_receive_wait">任务状态:待悬赏人确认完成</string>

    <!-- 个人中心 -->
    <string name="personal_center">个人中心</string>
    <string name="tip_to_open">该功能即将开放,敬请期待!</string>
    <string name="order_empty">暂无相关订单</string>
    <string name="order_empty_20">暂无待支付订单</string>
    <string name="order_empty_30">暂无已完成订单</string>
    <string name="order_empty_40">暂无待评价订单</string>
    <!-- 我的评价页面 -->
    <string name="my_evaluate_title">我的评价</string>

    <!-- 我的钱包 -->
    <string name="my_wallet">我的钱包</string>
    <string name="apply_get_money">申请提现</string>

    <!-- 积分中心 -->
    <string name="score_center">积分中心</string>
    <string name="msg_center">消息中心</string>
    <string name="contact_title">联系客服</string>

    <!-- 设置 -->
    <string name="setting_title">设置</string>
    <string name="sure_to_logout">确认要退出吗？</string>
    <string name="update_pwd_title">修改密码</string>

    <string name="notice_publish">您发布的悬赏任务正在进行中…</string>
    <string name="notice_receive">您接受的任务正在进行中…</string>

    <!-- 选择/定位城市 Begin -->
    <string name="select_city">选择城市</string>
    <string name="hot_city">热门城市</string>
    <string name="located_city">定位城市</string>
    <string name="hint_search_box">请输入城市名或拼音</string>
    <string name="nothing_found">没有搜索结果~</string>
    <string name="locating">正在定位…</string>
    <string name="located_failed">定位失败</string>
    <string name="city_changed">切换</string>
    <!-- 选择/定位城市 End -->

    <!-- 拍照 -->
    <string name="label_pick_from_gallery">从相册选择</string>
    <string name="label_take_a_picture">拍照</string>
    <string name="label_save_picture_failed">保存照片失败，请重试！</string>

    <!-- 微信分享 -->
    <string name="errcode_success">分享成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>

    <string name="pay_success">请您对ta人的服务进行评价。评价完成后，您将获得1000积分奖励。</string>
    <string name="pay_failed">请您重新支付</string>
    <string name="apply_withdrawals">您申请提现</string>
    <string name="your_account">您的账户</string>
    <string name="your_full_name">您的全名</string>
    <string name="next">下一步</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="complaint_tip">提示：请您选择投诉原因，以便我们为您处理。</string>
    <string name="click_to_send">点击发送</string>
    <string name="complaint_success">投诉成功</string>
    <string name="complaint_feedback_tip">您的投诉我们已经收到，我们会尽快与您联系，帮助您处理问题。</string>
    <string name="back_to_home">返回首页</string>
    <string name="finish">已完成</string>
    <string name="real_time">即时</string>
    <string name="start_evaluate">星评价</string>
    <string name="your_anonymous_evaluation">您的匿名评价</string>
    <string name="share">分享</string>
    <string name="payment_success">赏金支付成功</string>
    <string name="evaluation_tips">请您对ta人的服务进行评价。评价完成后，\n您将获得1000积分奖励。</string>
    <string name="next_time_todo">下次再说</string>
    <string name="immediate_evaluation">马上评价</string>
    <string name="uppay">银联支付</string>

</resources>
