<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f3f2"
    android:orientation="vertical">

    <TextView
        android:id="@+id/select_from_gallery"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/label_pick_from_gallery"
        android:textColor="#333333"
        android:textSize="@dimen/h3" />


    <TextView
        android:id="@+id/select_take_a_picture"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/label_take_a_picture"
        android:textColor="#333333"
        android:textSize="@dimen/h3" />


    <TextView
        android:id="@+id/select_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#868C95"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/dialog_cancel"
        android:textColor="@color/white"
        android:textSize="@dimen/h3" />

</LinearLayout>