<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_main_bg_color"
    android:orientation="vertical">

    <View style="@style/divider_theme_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_withdrawals"
            android:textColor="@color/text_gray_dark"
            android:textSize="@dimen/text_h2" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            tools:text="500"
            android:textColor="@color/text_gray_dark"
            tools:textSize="24dp" />

    </LinearLayout>

    <View style="@style/divider_theme_gray" />

    <View
        style="@style/divider_theme_gray"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/your_account"
            android:textColor="@color/text_gray_dark"
            android:textSize="@dimen/text_h2" />

        <EditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@color/total_transparent"
            android:hint="支付宝账户/手机号码"
            android:textColor="@color/text_gray_dark"
            android:textColorHint="@color/text_hint"
            android:textSize="@dimen/text_h2" />
    </LinearLayout>

    <View style="@style/divider_theme_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/your_full_name"
            android:textColor="@color/text_gray_dark"
            android:textSize="@dimen/text_h2" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@color/total_transparent"
            android:hint="用于校验支付宝付款全称"
            android:maxLength="15"
            android:singleLine="true"
            android:textColor="@color/text_gray_dark"
            android:textColorHint="@color/text_hint"
            android:textSize="@dimen/text_h2" />
    </LinearLayout>

    <View style="@style/divider_theme_gray" />

    <Button
        android:id="@+id/next"
        style="@style/App.Comm.Button"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/next" />
</LinearLayout>
